==> kibu-keyboards/qmk_firmware/qmk_firmware/lib/chibios-contrib/os/hal/ports/LPC/LLD/SPI/hal_spi_lld.c <==
#include "hal.h"
#define int_enable(SSP)                                                   \
do {(SSP)->IMSC = SSP_INT_RTMIS | SSP_INT_RXMIS | SSP_INT_TXMIS; } while(0)
#define int_disable(SSP)                                                  \
do {(SSP)->IMSC = 0; } while(0)

void spi_lld_init(void) {

#if LPC_SPI_USE_SPI1 == TRUE
  /* Driver initialization.*/
  spiObjectInit(&SPID1);
  // Enable AHBCLK
  LPC_SYSCON->SYSAHBCLKCTRL |= SYSCON_SYSAHBCLKCTRL_SSP1;
#endif
}

void spi_lld_start(SPIDriver *spip) {

  if (spip->state == SPI_STOP) {
    /* Enables the peripheral.*/
#if LPC_SPI_USE_SPI1 == TRUE
    if (&SPID1 == spip) {
      // Set Clock Divider
      LPC_SYSCON->SSP1CLKDIV = (uint32_t) spip->config->clock_divider;
      LPC_SYSCON->PRESETCTRL |= SYSCON_PRESETCTRL_SSP1_RSTn; // Clear Reset

      LPC_SSP1->CR0 = SSP_CR0_DSS(spip->config->data_size - 1) |
        SSP_CR0_SCR(spip->config->clock_rate);
      LPC_SSP1->CPSR = spip->config->clock_prescaler;

      int_disable(LPC_SSP1);
      LPC_SSP1->CR1 = SSP_CR1_SPI_EN; // Run in Master mode

      #if !defined(LPC_SPI_SPI1_IRQ_PRIORITY)
      #error "LPC_SPI_SPI1_IRQ_PRIORITY is not defined"
      #endif
      nvicEnableVector(SSP1_IRQn, LPC_SPI_SPI1_IRQ_PRIORITY);
    }
#endif
  }
  /* Configures the peripheral.*/

}

void spi_lld_stop(SPIDriver *spip) {

  if (spip->state == SPI_READY) {
    /* Disables the peripheral.*/
#if LPC_SPI_USE_SPI1 == TRUE
    if (&SPID1 == spip) {
      LPC_SSP1->CR1 = 0; // Disable SSP1
      LPC_SYSCON->PRESETCTRL &= ~SYSCON_PRESETCTRL_SSP1_RSTn; // Reset SSP1
      nvicDisableVector(SSP1_IRQn);
    }
#endif
  }
}

void spi_lld_exchange(SPIDriver *spip, size_t n,
                      const void *txbuf, void *rxbuf) {
  if (n == 0) {
    return;
  }
  spip->txbuf = txbuf;
  spip->rxbuf = rxbuf;
  spip->size = n;
  spip->cnt = 0;
#if LPC_SPI_USE_SPI1 == TRUE
  if (spip == &SPID1) {
    // Wait for SPI IDLE. Empty RX buffer
    while(LPC_SSP1->SR & (SSP_SR_BUSY | SSP_SR_RxNotEmpty)) {
      if (LPC_SSP1->SR) {
        (void)LPC_SSP1->DR;
      }
    }

    // Enable Interrupts
    LPC_SSP1->ICR = 0x3; // Clear Interrutps
    int_enable(LPC_SSP1);
    if (txbuf) {
      if (spip->config->data_size > 8) {
        LPC_SSP1->DR = ((uint16_t*)spip->txbuf)[spip->cnt];
      } else {
        LPC_SSP1->DR = ((uint8_t*)spip->txbuf)[spip->cnt];
      }
    } else {
      LPC_SSP1->DR = 0;
    }
  }
#endif
}

uint16_t spi_lld_polled_exchange(SPIDriver *spip, uint16_t frame) {

#if LPC_SPI_USE_SPI1 == TRUE
  if (spip == &SPID1) {
    // Wait for SPI IDLE. Empty RX buffer
    while(LPC_SSP1->SR & (SSP_SR_BUSY | SSP_SR_RxNotEmpty)) {
      if (LPC_SSP1->SR) {
        (void)LPC_SSP1->DR;
      }
    }
    LPC_SSP1->DR = frame;
    while((LPC_SSP1->SR & SSP_SR_RxNotEmpty) != 0){} // Wait till RxNotEmpty
    return (uint16_t) LPC_SSP1->DR;
  }
#endif

  return 0;
}
